# annotated-media-fix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PREP.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
annotated_media_fix/: __init__.py  build_review_canvas.py  find_latest_annotations.py  validate_annotation_bundle.py
examples/: review-demo.html  user-feedback-ja.md  user-test-annotations.json  user-test-fix-brief.md
promo/: x-launch-banner.html
scripts/: build_review_canvas.py  find_latest_annotations.py  validate_annotation_bundle.py
